# Subnet-ZK-Compose

./: .env.example  .gitignore  README.md  deploy.sh  netlify.toml  next.config.js  package.json  render.yaml  setup.py  vercel.json  verify_standalone.py  verify_zk_compose.py
api/: index.py  requirements.txt
backend/: ai_controller.py  main.py  requirements.txt  start.py  test_agents.py
backend/agents/: __init__.py  agent_scheduler.py  autonomous_oracle.py  blockchain_listener.py
backend/scripts/: main.py
backend/services/: sms_service.py  sms_templates.py
contracts/: FarmOracleComplete.sol  FarmOracleNFT.sol  FarmOraclePrivacy.sol  FarmOracleStaking.sol  Marketplace.sol
docs/: idea.md  info.md  whats.md
frontend/: FRONTEND_CONNECTION_SUMMARY.md  next.config.js  package.json  truffle-config.js  tsconfig.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/disease-detection/: page.tsx
frontend/app/market-prediction/: page.tsx
frontend/app/marketplace/: page.tsx
frontend/migrations/: 3_deploy_nft_system.js  4_deploy_privacy.js
frontend/src/: App.css  App.js  index.js
neurons/: miner.py  validator.py
template/: __init__.py
tests/: test_incentives.py  test_zk_logic.py  verify_production.py
zk_bridge/: Cargo.toml
zk_bridge/src/: lib.rs
zk_compose/: folding_logic.py  protocol.py
zk_compose/base/: miner.py  neuron.py  validator.py
zk_compose/integrations/: sn2_client.py
zk_compose/utils/: config.py
zk_compose/validator/: forward.py  reward.py
zk_compose/zk_logic/: vk_registry.py  zk_engine.py
(+41 files in other folders)
