[package]
name = "zk_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "zk_bridge"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }

# ZK Proof Systems
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
ark-relations = "0.4.0"
nova-snark = "0.2"

# Force update for problematic dependencies
bitvec = "1.0.1"
funty = "2.0.0"

[patch.crates-io]
funty = { git = "https://github.com/myrrlyn/funty", branch = "master" }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5" # For scaling benchmarks
