[package]
name = "zk_bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "zk_bridge"
crate-type = ["cdylib"]

[dependencies]
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py37"] }

# ZK Proof Systems (Arkworks - Industry Standard for Groth16/Plonk)
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
ark-bn254 = "0.4.0" # Fast curve for production
ark-relations = "0.4.0"
ark-crypto-primitives = "0.4.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
